test/toolstest/effect_parser/valid/21_raw_string_in_attr.def
/*
 * Valid: Attribute with raw string literal
 */

struct [[ge::params(type=TEST_RAW_STRING_ATTR, name="TestRawStringAttr", pattern=R"(\w+\d+)")]] TestRawStringAttrParams {
    float value1;
    int value2;
};
