test/toolstest/effect_parser/invalid/06_unterminated_string.def
/*
 * Invalid: Unterminated string literal in attribute
 */

struct [[ge::params(type=TEST_UNTERM_STR, name="TestUnterminated)]] TestUnterminatedParams {
    float value1;
    int value2;
};
